--- a/src/app/modules/calendar/day/day.component.scss
+++ b/src/app/modules/calendar/day/day.component.scss
@@ -39,6 +39,18 @@ $size: calc(8 * #{$cal-size});
   .number {
     font-size: 200%;
     font-weight: bold;
+
+    .noend {
+      color: #f00;
+    }
+
+    .start {
+      padding-right: 0.3em;
+    }
+
+    .end {
+      padding-left: 0.3em;
+    }
   }
 
   .info {
@@ -95,12 +107,16 @@ $size: calc(8 * #{$cal-size});
 }
 
 .today {
-  box-shadow: 0 0 15px 2px $color-today;
+  box-shadow: 0 0 0px 5px $color-today;
 }
 
 .active {
-  border: 3px solid rgba(0, 0, 0, 0.5) !important;
-  border-radius: 1em !important;
+  border: 3px solid rgba(127, 127, 0, 0.7) !important;
+  background: rgba(255, 255, 0, 0.5);
+  border-radius: 50%;
+  div {
+    font-size: 90%;
+  }
 }
 
 .hastimes {
