--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -18,10 +18,11 @@ $color-krank-body: #ff7;
 $color-feiertag: map-get($mat-pink, 300);
 $color-feiertag-body: #fcc;
 $color-info: map-get($mat-pink, 100);
-$color-cursor: rgba(64,64,255,0.3);
-$color-today: #44f;
+$color-cursor: rgba(64, 64, 255, 0.3);
+$color-today: #f00;
 $color-frei: #eee;
 $color-frei-font: #800;
+$color-current: #aaf;
 
 $cal-size: 0.7em;
 
