--- a/src/app/modules/calendar/day/day.component.html
+++ b/src/app/modules/calendar/day/day.component.html
@@ -1,5 +1,9 @@
 <div [class]="dayClass(day)" *ngIf="day.isValid" (click)="clickEvent.emit(day)">
-  <div class="number">{{day.display}}</div>
+  <div class="number">
+    <div *ngIf="day.times?.length>0" [class]="classForStartBracket">[</div>
+    <div>{{day.display}}</div>
+    <div *ngIf="day.times != null && day.times[day.times.length-1]?.end != null" class="end">]</div>
+  </div>
   <div class="info" [innerHTML]="day.info"></div>
 </div>
 <div class="empty" *ngIf="!day.isValid">
