--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,23 +1,24 @@
+@use '~@angular/material' as mat;
 @import '~@angular/material/theming';
 @import 'src/styles/variables';
 
-$cpu-theme-primary: mat-palette($mat-grey, 700, 300, 900);
-$cpu-theme-accent: mat-palette($mat-indigo, 900);
-$cpu-theme-warn: mat-palette($mat-pink);
+$cpu-theme-primary: mat.define-palette(mat.$grey-palette, 700, 300, 900);
+$cpu-theme-accent: mat.define-palette(mat.$indigo-palette, 900);
+$cpu-theme-warn: mat.define-palette(mat.$pink-palette);
 
-$cpu-theme: mat-light-theme($cpu-theme-primary, $cpu-theme-accent, $cpu-theme-warn);
+$cpu-theme: mat.define-light-theme($cpu-theme-primary, $cpu-theme-accent, $cpu-theme-warn);
 
-$color-urlaub: map-get($mat-blue, 300);
-$color-urlaubhalb: map-get($mat-blue, 200);
-$color-teilzeitfrei: map-get($mat-green, 200);
-$color-urlaub-body: map-get($mat-blue, 200);
-$color-urlaubhalb-body: map-get($mat-blue, 100);
-$color-teilzeitfrei-body: map-get($mat-green, 100);
-$color-krank: map-get($mat-amber, 300);
+$color-urlaub: map-get(mat.$blue-palette, 300);
+$color-urlaubhalb: map-get(mat.$blue-palette, 200);
+$color-teilzeitfrei: map-get(mat.$green-palette, 200);
+$color-urlaub-body: map-get(mat.$blue-palette, 200);
+$color-urlaubhalb-body: map-get(mat.$blue-palette, 100);
+$color-teilzeitfrei-body: map-get(mat.$green-palette, 100);
+$color-krank: map-get(mat.$amber-palette, 300);
 $color-krank-body: #ff7;
-$color-feiertag: map-get($mat-pink, 300);
+$color-feiertag: map-get(mat.$pink-palette, 300);
 $color-feiertag-body: #fcc;
-$color-info: map-get($mat-pink, 100);
+$color-info: map-get(mat.$pink-palette, 100);
 $color-cursor: rgba(64, 64, 255, 0.3);
 $color-today: #f00;
 $color-frei: #eee;
