--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 // import our custom theme
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @import './styles/theme.scss';
 
 // always include only once per project
