--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,5 +1,5 @@
-@use '~@angular/material' as mat;
-@import '~@angular/material/theming';
+@use '@angular/material' as mat;
+@import '@angular/material/theming';
 @import 'src/styles/variables';
 
 $cpu-theme-primary: mat.define-palette(mat.$grey-palette, 700, 300, 900);
