--- a/src/app/core/components/dialog/dialog.component.scss
+++ b/src/app/core/components/dialog/dialog.component.scss
@@ -1,6 +1,6 @@
-@import '~node_modules/@angular/material/theming';
-@import '~src/styles/common';
-@import '~src/styles/theme';
+@import 'node_modules/@angular/material/theming';
+@import 'src/styles/common';
+@import 'src/styles/theme';
 $c1: $clCpuRed;
 $c2: $clCpuBlue;
 $c3: $clCpuGrey;
